; ModuleID = '/home/carl/AnghaBench/linux/fs/afs/extr_cmservice.c_afs_find_cm_server_by_peer.c'
source_filename = "/home/carl/AnghaBench/linux/fs/afs/extr_cmservice.c_afs_find_cm_server_by_peer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.afs_call = type { %struct.afs_server*, %struct.TYPE_2__*, i32 }
%struct.afs_server = type { i32 }
%struct.TYPE_2__ = type { i32 }
%struct.sockaddr_rxrpc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.afs_call*)* @afs_find_cm_server_by_peer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @afs_find_cm_server_by_peer(%struct.afs_call* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.afs_call*, align 8
  %4 = alloca %struct.sockaddr_rxrpc, align 4
  %5 = alloca %struct.afs_server*, align 8
  store %struct.afs_call* %0, %struct.afs_call** %3, align 8
  %6 = load %struct.afs_call*, %struct.afs_call** %3, align 8
  %7 = getelementptr inbounds %struct.afs_call, %struct.afs_call* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.afs_call*, %struct.afs_call** %3, align 8
  %12 = getelementptr inbounds %struct.afs_call, %struct.afs_call* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @rxrpc_kernel_get_peer(i32 %10, i32 %13, %struct.sockaddr_rxrpc* %4)
  %15 = load %struct.afs_call*, %struct.afs_call** %3, align 8
  %16 = getelementptr inbounds %struct.afs_call, %struct.afs_call* %15, i32 0, i32 1
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = call %struct.afs_server* @afs_find_server(%struct.TYPE_2__* %17, %struct.sockaddr_rxrpc* %4)
  store %struct.afs_server* %18, %struct.afs_server** %5, align 8
  %19 = load %struct.afs_server*, %struct.afs_server** %5, align 8
  %20 = icmp ne %struct.afs_server* %19, null
  br i1 %20, label %24, label %21

21:                                               ; preds = %1
  %22 = load %struct.afs_call*, %struct.afs_call** %3, align 8
  %23 = call i32 @trace_afs_cm_no_server(%struct.afs_call* %22, %struct.sockaddr_rxrpc* %4)
  store i32 0, i32* %2, align 4
  br label %31

24:                                               ; preds = %1
  %25 = load %struct.afs_server*, %struct.afs_server** %5, align 8
  %26 = load %struct.afs_call*, %struct.afs_call** %3, align 8
  %27 = getelementptr inbounds %struct.afs_call, %struct.afs_call* %26, i32 0, i32 0
  store %struct.afs_server* %25, %struct.afs_server** %27, align 8
  %28 = load %struct.afs_call*, %struct.afs_call** %3, align 8
  %29 = load %struct.afs_server*, %struct.afs_server** %5, align 8
  %30 = call i32 @afs_record_cm_probe(%struct.afs_call* %28, %struct.afs_server* %29)
  store i32 %30, i32* %2, align 4
  br label %31

31:                                               ; preds = %24, %21
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32 @rxrpc_kernel_get_peer(i32, i32, %struct.sockaddr_rxrpc*) #1

declare dso_local %struct.afs_server* @afs_find_server(%struct.TYPE_2__*, %struct.sockaddr_rxrpc*) #1

declare dso_local i32 @trace_afs_cm_no_server(%struct.afs_call*, %struct.sockaddr_rxrpc*) #1

declare dso_local i32 @afs_record_cm_probe(%struct.afs_call*, %struct.afs_server*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
